k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodetestapp
  namespace: nodetestapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodetestapp
  template:
    metadata:
      labels:
        app: nodetestapp
    spec:
      containers:
        - name: nodetestapp
          image: public.ecr.aws/l1i3r8d0/nodetestapp:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nodetestapp
  namespace: nodetestapp
spec:
  selector:
    app: nodetestapp
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Namespace
metadata:
    name: nodetestapp
